--- a/gallery.html
+++ b/gallery.html
@@ -115,6 +115,7 @@
   </div>
 </header>
 
+
 <section class="page-hero fade-in">
   <div class="container">
     <h1>Gallery</h1>
@@ -148,12 +149,37 @@
            loading="lazy">
       <figcaption>Bespoke shirt and trouser</figcaption>
     </figure>
+
+    <!-- NEW IMAGE 1: Subtle embroidery white kaftan -->
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/8kyttDVZ/4181DFF3-DA4B-4B47-89C1-5F2701ECC5D9.jpg" 
+           alt="Subtle embroidered white kaftan by FAWLUX bespoke tailoring Lagos Nigeria" 
+           loading="lazy">
+      <figcaption>Modern minimalism in embroidered white</figcaption>
+    </figure>
+
+    <!-- NEW IMAGE 2: Elaborate embroidery white kaftan -->
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/tRr22yHm/AD4B4DA8-B5B6-4453-930E-1F4F99708204.jpg" 
+           alt="Elaborate white embroidered kaftan with detailed patterns by FAWLUX bespoke tailors Nigeria" 
+           loading="lazy">
+      <figcaption>Artisanal embroidery for classic celebrations</figcaption>
+    </figure>
+
+    <!-- NEW IMAGE 3: Navy and gold embroidered kaftan -->
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/25w4yFk4/00B6877A-A9FD-4696-9041-4BA0477D4285.jpg" 
+           alt="Bold navy and gold embroidered kaftan by FAWLUX bespoke tailoring Lagos" 
+           loading="lazy">
+      <figcaption>Bold elegance in navy and gold embroidery</figcaption>
+    </figure>
   </div>
 </section>
 
 <section class="container note fade-in">
   <p>Want this look tailored to you? <a class="inline-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an appointment</a>.</p>
 </section>
+
 
 <footer class="site-footer">
   <div class="container footer-grid">
