--- a/contact.html
+++ b/contact.html
@@ -49,14 +49,14 @@
   <meta property="og:url" content="https://fawlux.netlify.app/contact.html">
   <meta property="og:title" content="Contact FAWLUX — Book Appointment">
   <meta property="og:description" content="Visit us in Lagos or book WhatsApp appointment for premium tailoring.">
-  <meta property="og:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+  <meta property="og:image" content="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="FAWLUX">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact FAWLUX — Book Appointment">
   <meta name="twitter:description" content="Visit us in Lagos or book WhatsApp appointment for premium tailoring.">
-  <meta name="twitter:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+  <meta name="twitter:image" content="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png">
 
   <link rel="stylesheet" href="style.css">
 
@@ -231,7 +231,7 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <a href="index.html" class="foot-brand">
-      <div class="brand-line">FAWLUX</div>
+      <div class="brand-line">F A W L U X</div>
       <div class="tagline">Perfectly stitched.</div>
     </a>
     <div class="foot-links">
