--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
   <meta property="og:url" content="https://fawlux.netlify.app/gallery.html">
   <meta property="og:title" content="FAWLUX Gallery — Premium Menswear">
   <meta property="og:description" content="View our collection of agbada, kaftan, shirts, and bespoke suits.">
-  <meta property="og:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+  <meta property="og:image" content="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="FAWLUX">
