--- a/index.html
+++ b/index.html
@@ -476,7 +476,13 @@ Every stitch is intentional — because you deserve nothing less.</p>
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 FAWLUX. All Rights Reserved.</div>
+  <div class="copyright">
+    © 2026 FAWLUX. All Rights Reserved. 
+    <span style="margin: 0 8px">|</span>
+    <a href="https://amsuccstudio.netlify.app" target="_blank" rel="noopener" style="color: var(--muted); text-decoration: none;">
+      Developed by AMSUCC Studio
+    </a>
+  </div>
 </footer>
 
 <!-- Back to Top Button -->
