--- a/gallery.html
+++ b/gallery.html
@@ -180,7 +180,6 @@
   <p>Want this look tailored to you? <a class="inline-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an appointment</a>.</p>
 </section>
 
-
 <footer class="site-footer">
   <div class="container footer-grid">
     <a href="index.html" class="foot-brand">
@@ -204,8 +203,13 @@
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 FAWLUX. All Rights Reserved.</div>
+  <div class="copyright">
+    © 2026 FAWLUX. All Rights Reserved. 
+    <span style="margin: 0 8px">|</span>
+    <a href="https://amsuccstudio.netlify.app" target="_blank" rel="noopener" style="color: var(--muted); text-decoration: none;">
+      Developed by AMSUCC Studio
+    </a>
+  </div>
 </footer>
-
 </body>
 </html>
