--- a/contact.html
+++ b/contact.html
@@ -251,9 +251,14 @@
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 FAWLUX. All Rights Reserved.</div>
+  <div class="copyright">
+    © 2026 FAWLUX. All Rights Reserved. 
+    <span style="margin: 0 8px">|</span>
+    <a href="https://amsuccstudio.netlify.app" target="_blank" rel="noopener" style="color: var(--muted); text-decoration: none;">
+      Developed by AMSUCC Studio
+    </a>
+  </div>
 </footer>
-
 <script>
 function redirectToWhatsApp(event) {
   event.preventDefault();
